// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldIcon changes fill when scripted is true 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon"
  fill="dark"
  iconType="tokenNumber"
  size="s"
/>
`;

exports[`FieldIcon renders an icon for an unknown type 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon"
  color="gray"
  iconType="questionInCircle"
  size="s"
/>
`;

exports[`FieldIcon renders known field types _source is rendered 1`] = `
<EuiToken
  aria-label="_source"
  className="kbnFieldIcon"
  color="gray"
  iconType="editorCodeBlock"
  size="s"
/>
`;

exports[`FieldIcon renders known field types boolean is rendered 1`] = `
<EuiToken
  aria-label="boolean"
  className="kbnFieldIcon"
  iconType="tokenBoolean"
  size="s"
/>
`;

exports[`FieldIcon renders known field types conflict is rendered 1`] = `
<EuiToken
  aria-label="conflict"
  className="kbnFieldIcon"
  color="euiVisColor9"
  iconType="alert"
  size="s"
/>
`;

exports[`FieldIcon renders known field types date is rendered 1`] = `
<EuiToken
  aria-label="date"
  className="kbnFieldIcon"
  iconType="tokenDate"
  size="s"
/>
`;

exports[`FieldIcon renders known field types geo_point is rendered 1`] = `
<EuiToken
  aria-label="geo_point"
  className="kbnFieldIcon"
  color="euiColorVis5"
  iconType="tokenGeo"
  size="s"
/>
`;

exports[`FieldIcon renders known field types geo_shape is rendered 1`] = `
<EuiToken
  aria-label="geo_shape"
  className="kbnFieldIcon"
  color="euiColorVis5"
  iconType="tokenGeo"
  size="s"
/>
`;

exports[`FieldIcon renders known field types ip is rendered 1`] = `
<EuiToken
  aria-label="ip"
  className="kbnFieldIcon"
  iconType="tokenIP"
  size="s"
/>
`;

exports[`FieldIcon renders known field types murmur3 is rendered 1`] = `
<EuiToken
  aria-label="murmur3"
  className="kbnFieldIcon"
  iconType="tokenFile"
  size="s"
/>
`;

exports[`FieldIcon renders known field types nested is rendered 1`] = `
<EuiToken
  aria-label="nested"
  className="kbnFieldIcon"
  iconType="tokenNested"
  size="s"
/>
`;

exports[`FieldIcon renders known field types number is rendered 1`] = `
<EuiToken
  aria-label="number"
  className="kbnFieldIcon"
  iconType="tokenNumber"
  size="s"
/>
`;

exports[`FieldIcon renders known field types string is rendered 1`] = `
<EuiToken
  aria-label="string"
  className="kbnFieldIcon"
  iconType="tokenString"
  size="s"
/>
`;

exports[`FieldIcon renders with className if provided 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon myClass"
  color="gray"
  iconType="questionInCircle"
  size="s"
/>
`;

exports[`FieldIcon supports same props as EuiToken 1`] = `
<EuiToken
  aria-label="test"
  className="kbnFieldIcon"
  color="euiColorVis0"
  fill="none"
  iconType="tokenNumber"
  shape="circle"
  size="l"
/>
`;
